# its-a-number

./: .gitignore  CMakeLists.txt  test.c
src/: bin.c  hex.c  its_a_number.h  kaktovik_inupiaq.c  oct.c
test/: bin_test.c  hex_test.c  kaktovik_test.c  oct_test.c  test.c  test.h
